Fixed card's vertical margin on mobile

--- a/src/common/components/card/card.module.scss
+++ b/src/common/components/card/card.module.scss
@@ -22,7 +22,7 @@ $imageMaxSize: 300px;
   & + & {
     margin-top: $cardMargin;
   }
-  margin: 0 -$cardGutter;
+  margin: 0 (-$cardGutter);
   padding: $cardGutter;
 }
 
